--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://jonlev03-hub.github.io/media-pilot/",
+  "homepage": "https://media-pilot.com/",
   "name": "media-pilot",
   "version": "0.1.0",
   "private": true,
